# sapo

./: .editorconfig  CHANGELOG.md  CLAUDE.md  README.md  conftest.py  pyproject.toml
.cursor/rules/: docs.mdc  github-actions.mdc  python.mdc
.github/workflows/: ci.yml  integration-tests.yml
docs/: README.md  sapo-improvements-plan.md
docs/development/: artifactory_install_spec.md  implementation-summary.md  implementation_plan.md  llm_rules.md
docs/examples/: oss-minimal-config.yaml
docs/troubleshooting/: artifactory-oss-issues.md  artifactory-oss-learnings.md
docs/user-guide/: README.md
sapo/cli/: __init__.py  __main__.py  artifactory.py  cli.py  console.py  http.py  release_notes.py
sapo/cli/archive/: __init__.py  extractor.py
sapo/cli/checksum/: __init__.py
sapo/cli/cleanup/: __init__.py
sapo/cli/download/: __init__.py  downloader.py  progress.py
sapo/cli/install_mode/: __init__.py  docker.py
sapo/cli/install_mode/common/: __init__.py  directory_utils.py  file_utils.py  system_utils.py
sapo/cli/install_mode/docker/: __init__.py  config.py  container.py  files.py  volume.py
sapo/cli/install_mode/templates/: __init__.py
sapo/cli/install_mode/templates/docker/: docker-compose.yml.j2  env.j2  startup-orchestrator.sh.j2  system.yaml.j2  system.yaml.oss.j2
sapo/cli/install_mode/validator/: __init__.py  base.py  errors.py  oss_validator.py
sapo/cli/platform/: __init__.py
sapo/cli/size/: __init__.py  formatter.py
sapo/cli/version/: __init__.py
tests/: TODO.md  test_archive.py  test_artifactory.py  test_checksum.py  test_cleanup.py  test_cli.py  test_cli_docker.py  test_client_session.py  test_download.py  test_install_docker_cli.py  test_integration.py  test_main.py  test_platform.py  test_release_notes.py  test_size.py  test_version.py
tests/integration/: test_archive_extraction.py
tests/test_install_mode/: __init__.py  test_docker.py  test_docker_config.py  test_docker_container.py  test_docker_critical.py  test_docker_files.py  test_docker_install.py  test_docker_module.py  test_file_utils_critical.py  test_oss_validator.py  test_validator_base.py  test_validator_errors.py  test_volume_advanced.py  test_volume_critical.py
